`gtk_menu_button_set_child` prints warning when argument is `NULL`
MWE
GtkWidget* button = gtk_menu_button_new();
gtk_menu_button_set_child(GTK_MENU_BUTTON(button), NULL);
prints
(test_main:257197): Gtk-CRITICAL **: 21:24:23.846: gtk_box_append: assertion 'GTK_IS_WIDGET (child)' failed
Even though the docs say that the child
argument can be NULL
. Setting the child to NULL
works as expected, it's only the warning that is being erroneously printed.
Tested with GTK4.10, on fedora linux.
Edited by Clem Cords