MenuButton—Unset old child of button before change

Noticed at https://gitlab.gnome.org/GNOME/gtk/-/issues/5969#note_1797116

https://gitlab.gnome.org/GNOME/gtk/-/issues/5969